Fri Feb 18 18:04:30 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Save separate bounces in separate files

Thu Feb 17 19:28:46 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Prescan some bounces before saving for full scanning

Thu Feb 17 16:13:29 CET 2005 (tk)
---------------------------------
  * freshclam/freshclam.c: do not call logg() in daemon_sighandler()
			   (patch by Trog)

Wed Feb 16 22:23:40 GMT 2005 (njh)
----------------------------------
  * libclamav:		s/BLOB/BLOBCLASS/ for Win32
			Don't put suffixes back on files to be scanned - it's
				no longer needed
			New mbox code is now properly ifdefed NEW_WORLD
				WARNING: it is still developers only code
			untar: check file close

Wed Feb 16 00:28:23 CET 2005 (tk)
---------------------------------
  * clamd/clamuko.c: properly unregister with Dazuko (patch by John Ogness
		     <jogness*antivir.de>)

Mon Feb 14 00:46:16 CET 2005 (tk)
---------------------------------
  V 0.83

Mon Feb 14 00:32:02 CET 2005 (tk)
---------------------------------
  * docs: update

Sun Feb 13 23:55:45 CET 2005 (tk)
---------------------------------
  * clamd: change default value of StreamMaxPort to 2048

Sun Feb 13 23:53:18 CET 2005 (tk)
---------------------------------
  * configure: --enable-maintainer-mode (patch by Stephen Gran
	       <steve*lobefin.net>)

Sun Feb 13 23:17:16 CET 2005 (tk)
---------------------------------
  * libclamav/untar.c: do not try to continue if there's no space on device

Sun Feb 13 20:52:57 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Up-issue to 0.83

Sun Feb 13 10:55:35 CET 2005 (tk)
---------------------------------
  * freshclam: add support for Foreground (requested by Jeremy Kitchen
	       <kitchen*scriptkitchen.com>)

Sun Feb 13 09:32:51 GMT 2005 (njh)
----------------------------------
  * libclamav/message.c:	Some files wouldn't uudecode correctly (reported
			by Jerome Limozin <jerome at limozin.net>)
